Fix to structure

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <script type="module" src="./src/endLevel.js"></script>
+  <script type="module" src="./puzzleGame.js"></script>
 </body>
 
 </html>
