--- a/src/level2.html
+++ b/src/level2.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <script type="module" src="./src/puzzleGame.js"></script>
+    <script type="module" src="./spiderlevel.js"></script>
 </body>
 
 </html>
