--- a/src/level3.html
+++ b/src/level3.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <script type="module" src="./src/spiderlevel.js"></script>
+    <script type="module" src="./endLevel.js"></script>
 </body>
 
 </html>
