--- a/level2.html
+++ b/level2.html
@@ -14,7 +14,9 @@
   <script type="importmap">
     {
         "imports": {
-            "three": "https://unpkg.com/three@0.138.0/build/three.module.js"
+            "three": "https://unpkg.com/three@0.138.0/build/three.module.js",
+            "three/addons/": "https://unpkg.com/three@0.138.0/examples/jsm/",
+            "three/fonts": "https://unpkg.com/three@0.138.0/examples/fonts/"
         }
     }
 </script>
