--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     {
         "imports": {
             "three": "https://unpkg.com/three@0.138.0/build/three.module.js",
-            "three/addons/": "https://unpkg.com/three@0.138.0/examples/jsm/",
-            "three/fonts/": "https://unpkg.com/three@0.138.0/examples/fonts/"
+            "three/addons/": "https://unpkg.com/three@0.138.0/examples/jsm/"
         }
     }
 </script>
