--- a/level3.html
+++ b/level3.html
@@ -2,27 +2,25 @@
 <html>
 
 <head>
-  <title>Discoverthreejs.com - The Structure of a three.js App</title>
+    <title>CS324 Submission</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8" />
-
-  <link rel="icon" href="https://discoverthreejs.com/favicon.ico" type="image/x-icon">
 
   <link href="./styles/main.css" rel="stylesheet" type="text/css">
 
   <script type="importmap">
     {
         "imports": {
-            "three": "https://unpkg.com/three@0.138.0/build/three.module.js",
-            "three/addons/": "https://unpkg.com/three@0.138.0/examples/jsm/"
+            "three": "../node_modules/three/build/three.module.js",
+            "three/addons/": "../node_modules/three/examples/jsm/"
         }
     }
 </script>
 </head>
 
 <body>
-    <script type="module" src="../src/endLevel.js"></script>
+    <script type="module" src="../src/level3.js"></script>
 </body>
 
 </html>
